--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/dimension?useSSL=true&characterEncoding=UTF-8&allowMultiQueries=true
 username=root
-password=123456
+password=
 #定义初始连接数  
 initialSize=0  
 #定义最大连接数  
