--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
 		<validator>5.4.1.Final</validator>
 	</properties>
 	<dependencies>
+
+<dependency>
+    <groupId>org.ansj</groupId>
+    <artifactId>ansj_seg</artifactId>
+    <version>5.1.6</version>
+</dependency>
+<dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.11.2</version>
+</dependency>
 		<!-- 单元测试 -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -29,7 +40,11 @@
 			<scope>test</scope>
 		</dependency>
 
-
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.4</version>
+</dependency>
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
